CHANGELOG
--------------------------

ClanSphere 2011.3 Patch 3 >> 2012-XX-XX
___________________________________________________________

-> Fixed head messages not shown in board listcat (reported by rapid)
-> Fixed icq profile links and removed status images as they don't work anymore (hajo)
-> Updated CKEditor to 3.6.4


ClanSphere 2011.3 Patch 2 >> 2012-06-16
___________________________________________________________

-> Changed notifymods to contain a hint for files and board mod functionality (hajo)
-> Fixed emails being malformed in some cases (fr33z3m4n, hajo)
-> Fixed news images not working in view action (hajo)
-> Fixed pagination in medals list not working (reported by astmaih)
-> Fixed redirect messages not working with pdo database drivers (hajo)
-> Fixed rss title and description not escaped (hajo)
-> Improved charset detection by sending a header (hajo)
-> Updated CKEditor to 3.6.3
-> Updated jQuery to 1.7.2


ClanSphere 2011.3 Patch 1 >> 2012-03-31
___________________________________________________________

-- New default template and theme made by Seron with optimizations by equal

-> Fixed board file handling issues (patches by Tazzernator)
-> Fixed category sorting in rules manage (palle!)
-> Fixed forward not translated in messages mod (hajo)
-> Fixed new countries not usable due to database limitations (reported by mindcrime)
-> Fixed no selection error message in maps mod not working (hajo)
-> Updated checks, information and links from svn to git (hajo)


ClanSphere 2011.3 >> 2012-03-02 [Last Release]
___________________________________________________________

-- Recommended PHP version changed to 5.4.0

-> Added caching support for a given number of seconds [ttl] (hajo)
-> Added caching support for wincache extension (hajo)
-> Added forwarding support to messages mod (fr33z3m4n)
-> Added new country icons and dropdown entries (hajo)
-> Fixed email line-endings and user email activation issues (hajo)